--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!Doctype html>
 <head>
-	<title>vseprosto.github.io</title>
+	<title>сайт</title>
 		<meta charset="UTF-8">
-	мпр
-<body> 
+<body>
+123
+</body>
 
 </html>
